manager/install/core/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: mows-argocd
    labels:
        mows.cloud/api-type: core
        mows.cloud/core-apis-disable-kyverno: "true"
